Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104679

[REG 6.2.4-6.3.1] ListView: ASSERT if PullBackHeader or PullBackFooter is used

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.4.3, 6.5.0
    • 6.3.1, 6.3.2
    • None
    • Windows 10, MSVC 2019
    • All
    • b59bc4fe9 (dev), 03c100f0f (6.5), 3518b8627 (6.4)

      100% ASSERT in case of PullBackHeader or PullBackFooter is used for positioning header/footer respectively.

      ASSERT: "!(max < min)" in file C:\Users\qt\work\install\include\QtCore/qglobal.h, line 1043
      

      Call stack:

                                                                            
      1   qt_message_fatal                       qlogging.cpp              1873 0x7ffc02d74784 
      2   QMessageLogger::fatal                  qlogging.cpp              882  0x7ffc02d72c28 
      3   qt_assert                              qglobal.cpp               3304 0x7ffc02d5fb69 
      4   qBound<double>                         qglobal.h                 1044 0x7ffc00b73b84 
      5   QQuickListViewPrivate::updateHeader    qquicklistview.cpp        1549 0x7ffc01398738 
      6   QQuickItemViewPrivate::refill          qquickitemview.cpp        1821 0x7ffc01365e0b 
      7   QQuickItemViewPrivate::refill          qquickitemview.cpp        1770 0x7ffc0136599e 
      8   QQuickItemViewPrivate::layout          qquickitemview.cpp        1919 0x7ffc013652be 
      9   QQuickItemView::updatePolish           qquickitemview.cpp        1475 0x7ffc0136047d 
      10  QQuickWindowPrivate::polishItems       qquickwindow.cpp          383  0x7ffc00e54094 
      11  QSGThreadedRenderLoop::polishAndSync   qsgthreadedrenderloop.cpp 1528 0x7ffc012dbcb7 
      12  QSGThreadedRenderLoop::handleExposure  qsgthreadedrenderloop.cpp 1313 0x7ffc012dd0e8 
      13  QSGThreadedRenderLoop::exposureChanged qsgthreadedrenderloop.cpp 1233 0x7ffc012d9d5b 
      14  QQuickWindow::exposeEvent              qquickwindow.cpp          215  0x7ffc00e4f6d4 
      15  QWindow::event                         qwindow.cpp               2509 0x7ffc04c4972b 
      16  QQuickWindow::event                    qquickwindow.cpp          1581 0x7ffc00e510b2 
      17  QCoreApplicationPrivate::notify_helper qcoreapplication.cpp      1234 0x7ffc02e5d8a2 
      18  doNotify                               qcoreapplication.cpp      1163 0x7ffc02e601a3 
      19  QCoreApplication::notify               qcoreapplication.cpp      1147 0x7ffc02e5a1d8 
      20  QGuiApplication::notify                qguiapplication.cpp       1956 0x7ffc04b504ef 
      ... <More>                                                                               
      

      Sample code:

      import QtQuick
      
      Window {
          width: 640
          height: 480
          visible: true
      
          ListView {
              anchors.fill: parent
              spacing: 5
      
              headerPositioning: ListView.PullBackHeader
              header: Item { implicitHeight: 46 }
      
      //        footerPositioning: ListView.PullBackFooter
      //        footer: Item { implicitHeight: 46 }
      
              model: 3
              delegate: Rectangle {
                  width: parent.width
                  height: 50
                  color: "black"
              }
          }
      }
      

        For Gerrit Dashboard: QTBUG-104679
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            studiosus Vladimir Belyavsky
            Votes:
            4 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes